test/official_tests/operator/less_or_equal_num_nonnum.lox
1 <= "1"; // error: {"line":1,"message":"Operator '<=': incompatible types 'number' and 'string'","type":"RuntimeError"}
